# pdf2audio

./: .gitignore  README.md  build_exe.py  pdf2audio.spec  pyproject.toml
.github/workflows/: build-release.yml
src/pdf2audio/: __init__.py  audio_formats.py  cli.py  launcher.py  manifest.py  model_manager.py  pdf_extract.py  tts_engine.py
src/pdf2audio/web/: app.py
src/pdf2audio/web/templates/: index.html
